--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,16 +3,16 @@ spring:
   # Database
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://trumpet.db.elephantsql.com/khbigqkv
-    username: khbigqkv
-    password: O2uQHu004jkxteHRUA3e-jwVntI0-0Fd
+    url: jdbc:postgresql://manny.db.elephantsql.com/lvvpggxj
+    username: lvvpggxj
+    password: C1hiIMrOGIClreH2XoN7ORHX3rFV97hY
   # JPA properties
   jpa:
     hibernate.ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 # Server configuration
 server:
-  port: 8080
+  port: 8082
 # Security configuration
 security:
   user:
