--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,25 +6,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v3
-     - name: Set up JDK 17
-       uses: actions/setup-java@v3
-       with:
-         java-version: '17'
-         distribution: 'temurin'
-         cache: maven
-     - name: Enable Dependency Graph
-       run: |
-         curl -X PATCH \
-           -H "Accept: application/vnd.github.v3+json" \
-           https://api.github.com/repos/${{ github.repository }}/topics \
-           -d '{"names": ["dependency-graph"]}'
-     - name: Build with Maven
-       run: mvn -B package --file pom.xml
-     - name: Publish to Docker Hub
-       uses: docker/build-push-action@v1
-       with:
-         username: ${{ secrets.DOCKER_HUB_USERNAME }}
-         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-         repository: greisikertuka/fti
-         tags: ${{github.run_number}}
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Enable Dependency Graph
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Publish to Docker Hub
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          repository: graceker/fti
+          tags: ${{github.run_number}}
