--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,12 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+      - name: Enable Dependency Graph
+        run: |
+          curl -X PATCH \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/topics \
+            -d '{"names": ["dependency-graph"]}'
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Publish to Docker Hub
