maven remove wrong code

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           curl -X PATCH \
             -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             https://api.github.com/repos/${{ github.repository }}/topics \
             -d '{"names": ["dependency-graph"]}'
       - name: Build with Maven
